refactor: Use TokenFactory.createBranch were applicable
Change-Id: I045029d981758446485416d8b69b6598a7a8323a